# aws-clipper

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .tagpr  CHANGELOG.md  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml  release.yml  reviewdog.yml  tagpr.yml
aws_clipper/: __init__.py  __main__.py  cli.py
awscli_config/: __init__.py  __main__.py
src/aws_clipper/: __init__.py  cli.py
tests/: test_aws_clipper.py  test_awscli_config.py  test_cli.py
tests/data/: data_types.ini  data_types.yaml  default_settings.ini  default_settings.yaml  extra_properties.ini  extra_properties.yaml  group_name.ini  group_name.yaml  groups.ini  groups.yaml  multiline_string.ini  multiline_string.yaml  only_default_profile.yaml  overwrite_null.ini  overwrite_null.yaml  s3_settings.ini  s3_settings.yaml  single_named_profile.ini  single_named_profile.yaml  substitution.ini  substitution.yaml  target_profiles.ini  target_profiles.yaml
