[tool.poetry]
name = "awscli-config"
version = "0.1.0"
description = "Dump config for AWS CLI"
authors = ["Tsunenobu Kai <kai2nenobu@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "awscli_config"}]

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
