[tool.poetry]
name = "awscli-config"
version = "0.1.0"
description = "Dump config for AWS CLI"
authors = ["Tsunenobu Kai <kai2nenobu@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "awscli_config"}]

[tool.poetry.scripts]
awscli-config = 'awscli_config.__main__:main'

[tool.poetry.dependencies]
python = "^3.7"
pyyaml = "^6.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pre-commit = [
    {version = "^2.21.0", python = "<3.8"},
    {version = "^3.2.0", python = ">=3.8"}
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
exclude = '''
(
    .venv
    |.mypy_cache
    |.tox
)
'''
